[build-system]
requires = ["setuptools >= 58.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pytonika"
version = "0.1.0"
description = "A Python library for interacting with Teltonika Networks HTTP API."
readme = "README.md"
license = { type = "MIT", file = "LICENSE" }
authors = [
    { name = "Iker García Calviño", email = "iker.gcalvino@udc.es" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "httpx >= 0.28.1",
]
